feat: setup hardware inventory core schema and api structures
